@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.sql.DataSource;
@@ -61,7 +60,7 @@ class FlywayEndpointDocumentationTests extends MockMvcEndpointDocumentationTests
 	}
 
 	private List<FieldDescriptor> migrationFieldDescriptors() {
-		return Arrays.asList(fieldWithPath("checksum").description("Checksum of the migration, if any.").optional(),
+		return List.of(fieldWithPath("checksum").description("Checksum of the migration, if any.").optional(),
 				fieldWithPath("description").description("Description of the migration, if any.").optional(),
 				fieldWithPath("executionTime").description("Execution time in milliseconds of an applied migration.")
 					.optional(),
